# AI-Assessment-Recommender

./: .gitignore  APPROACH.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: clarification.py  comparison_agent.py  conversation_understanding.py  formatter.py  guardrails.py  orchestrator.py  recommendation_agent.py  reranker.py
app/api/: routes.py
app/catalog/: catalog.json  catalog_loader.py
app/llm/: client.py
app/models/: schemas.py
app/retrieval/: embedder.py  faiss_index.py  keyword_retriever.py  retriever.py
app/static/: index.html
scripts/: build_catalog.py  debug_scrape.py  scrape_catalog.py  seed_catalog_raw.json
tests/: conftest.py  test_guardrails.py  test_schema_and_behavior.py  test_turn_cap_and_refine.py
